# Cougr

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECTS_CI_VERIFICATION.md  README.md  SECURITY.md
.github/workflows/: ai_dungeon_master_arena.yml  angry_birds.yml  arkanoid.yml  asteroids.yml  bomberman.yml  checkers.yml  connect_four.yml  core.yml  cross_asset_racing_league.yml  example_reusable.yml  flappy_bird.yml  geometry_dash.yml  guild_arena.yml  guild_treasury_wars.yml  memory-match-ci.yml  minesweeper.yml  pac_man.yml  pokemon_mini.yml  pong.yml  proof_of_hunt.yml  publish-crate.yml  reversi.yml  shadow_draft_card_game.yml  snake.yml  space_invaders.yml  sudoku.yml  tap_battle.yml  tetris.yml  tic_tac_toe.yml  tower_defense.yml  trading_card_game.yml  treasure_hunt.yml
benches/: ecs_bench.rs
docs/: ACCOUNT_KERNEL.md  API_CONTRACT.md  API_FREEZE_1_0.md  COMPATIBILITY_PROMISES.md  DOCUMENTATION.md  ECS_CORE.md  FEATURE_FLAGS.md  MATURITY_MODEL.md  MIGRATION_GUIDE.md  PATTERNS.md  PERFORMANCE.md  PRIVACY_MODEL.md  PUBLIC_GAPS.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  STANDARDS_LAYER.md  STATE_OF_REPO.md  THREAT_MODEL.md  UNSAFE_INVARIANTS.md
docs/adr/: 0001-public-surface.md  0002-accounts-beta.md  0003-privacy-split.md  0004-standards-stable.md
doocs/: PRIVACY_MODEL.md
examples/: README.md
examples/ai_dungeon_master_arena/: Cargo.toml
examples/angry_birds/: Cargo.toml  README.md
examples/arkanoid/: Cargo.toml
examples/asteroids/: Cargo.toml
examples/battleship/: Cargo.toml  README.md
examples/bomberman/: Cargo.toml  README.md
examples/checkers/: Cargo.toml  README.md
examples/chess/: Cargo.toml  README.md
examples/connect_four/: Cargo.toml  README.md
examples/cross_asset_racing_league/: Cargo.toml  README.md
examples/cross_asset_racing_league/src/: lib.rs
examples/dungeon_crawler/: Cargo.toml  README.md
examples/flappy_bird/: Cargo.toml  README.md
examples/geometry_dash/: Cargo.toml  README.md
examples/guild_arena/: Cargo.toml  README.md
examples/guild_treasury_wars/: Cargo.toml  README.md
examples/memory_match/: Cargo.toml  README.md
examples/minesweeper/: Cargo.toml  README.md
examples/pac_man/: Cargo.toml  README.md
examples/pokemon_mini/: Cargo.toml  README.md
examples/pong/: Cargo.toml  README.md
examples/proof_of_hunt/: Cargo.toml  README.md
examples/reversi/: Cargo.toml  MATCH_LOG.md  README.md
examples/rock_paper_scissors/: CI_VERIFICATION.md  Cargo.toml  README.md
examples/shadow_draft_card_game/: Cargo.toml  README.md
examples/snake/: Cargo.toml  README.md
examples/space_invaders/: Cargo.toml  README.md
examples/sudoku/: Cargo.toml  MATCH_LOG.md  README.md
examples/tap_battle/: Cargo.toml  README.md
examples/tap_battle/src/: auth.rs  game.rs  lib.rs  test.rs  types.rs
examples/tetris/: Cargo.toml  README.md
examples/tic_tac_toe/: Cargo.toml
examples/tower_defense/: Cargo.toml  README.md
examples/trading_card_game/: Cargo.toml  README.md
examples/trading_card_game/src/: lib.rs  systems.rs  test.rs
examples/treasure_hunt/: Cargo.toml  README.md
research/: codebase-analysis.md
skills/cougr-game-starter/: SKILL.md
src/: change_tracker.rs  commands.rs  component.rs  components.rs  ecs.rs  entity.rs  event.rs  game_world.rs  hooks.rs  lib.rs  macros.rs  observers.rs  plugin.rs  query.rs  resource.rs  scheduler.rs  simple_world.rs  storage.rs  system.rs  world.rs
src/accounts/: batch.rs  classic.rs  error.rs  (+16 more)
tests/: edge_cases.rs  integration_accounts.rs  integration_cross_module.rs  integration_ecs.rs  integration_standards.rs  integration_zk.rs  integration_zk_phase3.rs  no_deprecated_attrs.rs  public_api_surface.rs  stress.rs
(+139 files in other folders)
