[package]
name = "cougr-core"
version = "0.2.0"
edition = "2021"
description = "Cougr - A Soroban-compatible ECS framework for on-chain gaming on Stellar"
license = "MIT"
keywords = ["ecs", "game", "soroban", "blockchain", "stellar"]
categories = ["game-engines", "data-structures", "wasm"]
rust-version = "1.70.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
debug = []
hazmat-crypto = ["soroban-sdk/hazmat-crypto"]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "25.1.0"
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[[bench]]
name = "ecs_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
overflow-checks = true
