[package]
name = "cougr-core"
version = "1.0.0"
edition = "2021"
description = "Cougr - A Soroban-compatible ECS framework for on-chain gaming on Stellar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/salazarsebas/Cougr"
homepage = "https://github.com/salazarsebas/Cougr"
keywords = ["ecs", "game", "soroban", "blockchain", "stellar"]
categories = ["game-engines", "data-structures", "wasm"]
rust-version = "1.70.0"
exclude = [
    ".github/**",
    "public/**",
    "research/**",
    "skills/**",
    "test_snapshots/**",
    "examples/**/target/**",
    "examples/**/test_snapshots/**",
]

[lib]
crate-type = ["rlib"]

[features]
default = []
debug = []
hazmat-crypto = ["soroban-sdk/hazmat-crypto"]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "25.1.0"
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[[bench]]
name = "ecs_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
overflow-checks = true
