[package]
name = "cross_asset_racing_league"
version = "0.1.0"
edition = "2021"
description = "Cross-asset racing league example with payment-driven gameplay and stellar-zk anti-cheat"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cougr-core = { path = "../../" }
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
