[package]
name = "tap_battle"
version = "0.1.0"
edition = "2021"
description = "Tap Battle on-chain game with passkey authentication using cougr-core"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cougr-core = { path = "../../" }
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
