[package]
name = "trading_card_game"
version = "0.1.0"
edition = "2021"
description = "Trading Card Game on-chain using Cougr-Core ECS framework — demonstrates atomic multi-action turns via BatchBuilder on Stellar Soroban"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1.0"
cougr-core = { branch = "main", git = "https://github.com/salazarsebas/Cougr.git" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
